# poc_zephyr_rtos

./: .gitignore  CMakeLists.txt  README.md  config  log  nordic,uartspecific.yaml  prj.conf  rak5010_nrf52840.overlay
dev_configs/: config_modem
hex_files/: temperature_sensor.hex
jtag/: GEOKEG_FLASH001.jflash
src/: battery.c  battery.h  bg96.c  bg96.h  main.c  main.h  sensors.c  sensors.h  utils.c  utils.h
